style.css
/*
  Josh's Custom CSS Reset
  https://www.joshwcomeau.com/css/custom-css-reset/
*/

*,
*::before,
*::after {
  box-sizing: border-box;
}

* {
  margin: 0;
}

@media (prefers-reduced-motion: no-preference) {
  html {
    interpolate-size: allow-keywords;
  }
}

body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
}

img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}

input,
button,
textarea,
select {
  font: inherit;
}

p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
}

p {
  text-wrap: pretty;
}
h1,
h2,
h3,
h4,
h5,
h6 {
  text-wrap: balance;
}

#root,
#__next {
  isolation: isolate;
}

/* My css */

@import url(https://db.onlinewebfonts.com/c/2b3c8daea8f099473705414810697e44?family=SeedDemBol+W00+Regular);
@import url(https://db.onlinewebfonts.com/c/3d81921f1fdc36b2465117c4acbc3fbd?family=Syncopate+Bold);
@import url(https://db.onlinewebfonts.com/c/c79f8e8cdb2b980de775efd43a34b6a9?family=Artega);

:root {
  --color-logo: #4a4958;
  --color-bg-light: #ebebef;
  --color-accent: #fd8c57;
  --color-gradient-overlay: rgba(0, 0, 0, 0.2);
  --color-button-text: #ffffff;
  --color-user-stats: #bbbac5;
  --color-card: #b3b4c0;

  --font-heading: 'Artega';
  --font-body: 'Roboto', sans-serif;
  --font-username: 'Syncopate Bold';
  --font-small-text: 'SeedDemBol W00 Regular';

  --font-size-s: 0.875rem;
  --font-size-xs: 0.75rem;
  --font-size-xxs: 0.6875rem;

  --spacing-xxs: 0.5rem;
  --spacing-xs: 1rem;
  --spacing-s: 1.5rem;
  --spacing-m: 2rem;
  --spacing-l: 3rem;
  --spacing-xl: 4rem;

  --button-width: 11rem;
  --button-height: 2.5rem;
  --button-radius: 25px;
  --button-font-size: 0.8em;

  --logo-icon-size: 3rem;

  --username-font-size: 2rem;

  --profile-picture-size: 7rem;
  --profile-picture-border-color: white;
  --profile-picture-border-size: 0.2rem;

  --card-content-color: white;
  --card-min-width: 25rem;
  --card-max-height: 12rem;
  --remove-card-icon-size: 0.6rem;
  --remove-card-icon-color: white;
}

h1 {
  font-family: var(--font-heading);
  color: var(--color-logo);
}

body {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: var(--spacing-m);
  height: 100vh;
  padding: var(--spacing-l);
  background: linear-gradient(transparent, var(--color-gradient-overlay)),
    var(--color-bg-light);
}

button {
  width: var(--button-width);
  height: var(--button-height);
  border: none;
  border-radius: var(--button-radius);
  font-family: var(--font-body);
  font-size: var(--button-font-size);
  color: var(--color-button-text);
}

p {
  font-family: var(--font-small-text);
}

#new-book {
  background: var(--color-accent)
    linear-gradient(90deg, transparent, var(--color-gradient-overlay));
  align-self: flex-end;
}

#logo {
  justify-self: center;
  display: flex;
  align-items: center;
  gap: var(--spacing-xs);
  margin-bottom: var(--spacing-xl);
}

#logo-icon {
  width: var(--logo-icon-size);
  height: var(--logo-icon-size);
  fill: var(--color-logo);
}

#top-row {
  display: flex;
  width: 100%;
  justify-content: space-between;
}

#profile {
  display: flex;
  gap: var(--spacing-xs);
}

#profile-picture {
  width: var(--profile-picture-size);
  height: var(--profile-picture-size);
  border: solid var(--profile-picture-border-color)
    var(--profile-picture-border-size);
  border-radius: 100%;
}

#user-info {
  align-self: flex-end;
}

#user-name {
  font-family: var(--font-username);
  font-size: var(--username-font-size);
}

#user-stats {
  display: flex;
  gap: var(--spacing-m);
}

#user-stats > p {
  color: var(--color-user-stats);
}

#card-grid {
  width: 100%;
  flex-grow: 1;
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(var(--card-min-width), 1fr));
  grid-auto-rows: minmax(min-content, var(--card-max-height));
  gap: var(--spacing-m);
  overflow-y: auto;
}

.card {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  padding: var(--spacing-s) var(--spacing-m);
  border-radius: 25px;
  background: var(--color-card)
    radial-gradient(transparent, var(--color-gradient-overlay));
  color: var(--card-content-color);
}

.card h3 {
  font-family: var(--font-username);
  font-size: var(--font-size-s);
}

.card h4 {
  font-family: var(--font-body);
  font-size: var(--font-size-xs);
}

.card p {
  font-size: var(--font-size-xxs);
}

.card-top-row {
  display: flex;
  justify-content: space-between;
}

.remove-card-icon {
  width: var(--remove-card-icon-size);
  height: var(--remove-card-icon-size);
  fill: var(--remove-card-icon-color);
}

.book-stats {
  display: flex;
  flex-direction: column;
}

.read-status {
  display: flex;
  gap: var(--spacing-xxs);
}

.read-status > input {
  border: none;
}

